［更新］文件夹结构更新

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="" />
     <title>login</title>
     <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/login.css" />
+    <link rel="stylesheet" href="css/login/login.css" />
     <link rel="stylesheet" href="css/message.min.css" />
 </head>
 <body>
@@ -51,6 +51,6 @@
     </div>
     <script src="js/methods.min.js"></script>
     <script src="js/message.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/login/main.js"></script>
 </body>
 </html>
