--- a/index.html
+++ b/index.html
@@ -51,6 +51,6 @@
     </div>
     <script src="js/methods.min.js"></script>
     <script src="js/message.min.js"></script>
-    <script src="js/login/main.js"></script>
+    <script src="js/login/login.js"></script>
 </body>
 </html>
