［修复］相关页面修复
1、修复了新功能采用类与对象设计模式；
2、完成了点击出新tab窗口的模式设计；
3、针对frame进行了布局设置，采用了圣杯布局；

--- a/main.html
+++ b/main.html
@@ -12,18 +12,30 @@
 </head>
 <body>
     <div id="content">
-        <div class="option">
-            <label for="name">name</label>
-            <input type="text" name="name" id="name" data-checked="checked" />
-            <span>eg.'CharlesMoone'</span>
-        </div>
-        <div class="option">
-            <label for="age">age</label>
-            <input type="text" name="age" id="age" data-checked="checked" />
-            <span>eg.'21'</span>
-        </div>
-        <div class="option">
-            <button id="submit">submit</button>
+        <div class="area">
+            <div class="option">
+                <label for="name">name</label>
+                <input type="text" name="name" id="name" data-checked="checked" />
+                <span>eg.'CharlesMoone'</span>
+            </div>
+            <div class="option">
+                <label for="age">age</label>
+                <input type="text" name="age" id="age" data-checked="checked" />
+                <span>eg.'21'</span>
+            </div>
+            <div class="option">
+                <label for="sex">sex</label>
+                <input type="text" name="sex" id="sex" />
+                <span>eg.'male'</span>
+            </div>
+            <div class="option">
+                <label for="ID">ID</label>
+                <input type="text" name="ID" id="ID" data-checked="checked" />
+                <span>eg.'3203************14'</span>
+            </div>
+            <div class="option">
+                <button id="submit">submit</button>
+            </div>
         </div>
     </div>
     <script src="js/methods.min.js"></script>
