--- a/html/company/base.html
+++ b/html/company/base.html
@@ -7,8 +7,8 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>main</title>
-    <link rel="stylesheet" href="css/reset.css" />
-    <link rel="stylesheet" href="css/main/main.css" />
+    <link rel="stylesheet" href="../../css/reset.css" />
+    <link rel="stylesheet" href="../../css/company/base.css" />
 </head>
 <body>
     <div id="content">
@@ -38,7 +38,7 @@
             </div>
         </div>
     </div>
-    <script src="js/methods.min.js"></script>
-    <script src="js/main/main.js"></script>
+    <script src="../../js/methods.min.js"></script>
+    <script src="../../js/company/base.js"></script>
 </body>
 </html>
