［重大更新］更新了企业基本信息页面
1、更新了图片上传按钮的弹窗显示；
2、更新了基本信息的设置界面

--- a/frame.html
+++ b/frame.html
@@ -8,6 +8,7 @@
     <meta name="author" content="" />
     <title>welcome</title>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/message.css" />
     <link rel="stylesheet" href="css/frame.css" />
 </head>
 <body class="HolyGrail">
