［重大更新］更新了页面刷新方法
1、用hash的方法进行页面渲染和样式刷新；
2、用jQuery则更新了部分代码；

--- a/frame.html
+++ b/frame.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/message.css" />
     <link rel="stylesheet" href="css/frame.css" />
+    <link rel="stylesheet" href="css/list.css" />
+    <script src="js/methods.min.js"></script>
+    <script src="js/message.js"></script>
 </head>
 <body class="HolyGrail">
 <header>
@@ -28,7 +31,7 @@
     <aside class="HolyGrail-aside hidden">
     </aside>
     <main class="HolyGrail-content">
-        <iframe frameborder="0" name="frame" src="welcome.html"></iframe>
+        <div id="hash-page"></div>
     </main>
 </div>
 <script src="js/require.js" data-main="js/frame"></script>
