［修复］链接错误
1、修复了链接地址错误

--- a/frame.html
+++ b/frame.html
@@ -31,7 +31,9 @@
     <aside class="HolyGrail-aside hidden">
     </aside>
     <main class="HolyGrail-content">
-        <div id="hash-page"></div>
+        <div id="hash-page">
+            123
+        </div>
     </main>
 </div>
 <script src="js/require.js" data-main="js/frame"></script>
