［重大更新］更新了仓库管理页面
1、完善了仓库管理页面，没有使用bootgrid／bt等样式，手动完成；
2、修复了一些小问题

--- a/frame.html
+++ b/frame.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/message.css" />
     <link rel="stylesheet" href="css/frame.css" />
     <link rel="stylesheet" href="css/list.css" />
+    <link rel="stylesheet" href="css/table.css" />
     <script src="js/methods.min.js"></script>
     <script src="js/message.js"></script>
 </head>
