［修复］修复了点击错误
1、修复了点击title无法跳转到首页的bug；

--- a/frame.html
+++ b/frame.html
@@ -18,7 +18,7 @@
 <body class="HolyGrail">
 <header>
     <div id="logo"><img src="img/skype.png" alt="logo" /></div>
-    <div id="title">中国第一家快消品公司</div>
+    <div id="title"><a href="frame.html">中国第一家快消品公司</a></div>
     <div id="help">帮助</div>
     <div id="setting">设置</div>
     <div id="quit">退出</div>
