［6.20更新］更新了新增仓库页面
1、更新了新增仓库页面；
2、仓库列表页面新增了按钮［新增仓库］，点击按钮hash跳转

--- a/html/company/warehouse.html
+++ b/html/company/warehouse.html
@@ -1,6 +1,7 @@
 <div id="content">
     <div class="contentTitle">
         <h5>仓库列表</h5>
+        <div id="addWarehouse"><span>新增仓库</span></div>
     </div>
     <table>
         <thead>
