［修复］小修复
1、修复了“产品信息”名称；
2、修复了相关js

--- a/frame.html
+++ b/frame.html
@@ -27,7 +27,7 @@
     <nav class="HolyGrail-nav">
         <div id="nav-hidden"></div>
         <div class="HolyGrail-button" data-name="company"><img src="img/skype.png" /><span>企业信息</span></div>
-        <div class="HolyGrail-button" data-name="table"><img src="img/skype.png" /><span>table</span></div>
+        <div class="HolyGrail-button" data-name="product"><img src="img/skype.png" /><span>产品信息</span></div>
     </nav>
     <aside class="HolyGrail-aside hidden">
     </aside>
