［修复］更新结构
1、新增一个类tipClass类，修改为全局类；
2、取消使用require.js进行强制性先后加载；
3、新增了addWarehouse.js进行区别与base.js

--- a/frame.html
+++ b/frame.html
@@ -36,6 +36,8 @@
         </div>
     </main>
 </div>
-<script src="js/require.js" data-main="js/frame"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/frame.js"></script>
+<script src="js/TipClass.js"></script>
 </body>
 </html>
