--- a/html/company/addWarehouse.html
+++ b/html/company/addWarehouse.html
@@ -29,4 +29,4 @@
         </div>
     </div>
 </div>
-<script src="js/company/base.js"></script>
+<script src="js/company/addWarehouse.js"></script>
