［修复］部分小修复

--- a/html/company/base.html
+++ b/html/company/base.html
@@ -1,7 +1,7 @@
 <div id="content">
     <div class="area">
         <div class="contentTitle">
-            <h5>企业基本信息设置</h5>
+            <h5><span>企业基本信息设置</span></h5>
         </div>
         <div class="option">
             <label for="name"><i>*</i>企业名称</label>
