--- a/html/company/editWarehouse.html
+++ b/html/company/editWarehouse.html
@@ -1,7 +1,11 @@
 <div id="content">
     <div class="area">
         <div class="contentTitle">
-            <h5><span>仓库基本信息设置</span></h5>
+            <h5>
+                <span onclick="window.history.back();">仓库列表</span>
+                <span>></span>
+                <span>修改仓库</span>
+            </h5>
         </div>
         <div class="option">
             <label for="warehouseName"><i>*</i>仓库名称</label>
@@ -29,4 +33,4 @@
         </div>
     </div>
 </div>
-<script src="js/company/addWarehouse.js"></script>
+<script src="js/company/editWarehouse.js"></script>
