--- a/html/company/warehouse.html
+++ b/html/company/warehouse.html
@@ -1,6 +1,6 @@
 <div id="content">
     <div class="contentTitle">
-        <h5>仓库列表</h5>
+        <h5><span>仓库列表</span></h5>
         <div id="addWarehouse"><span>新增仓库</span></div>
     </div>
     <table>
@@ -23,7 +23,7 @@
             <td>022-23897641</td>
             <td>
                 <div class="dus">
-                    <img src="img/skype.png" alt="edit" />
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
                     <img src="img/skype.png" alt="delete" />
                 </div>
             </td>
