--- a/frame.html
+++ b/frame.html
@@ -28,6 +28,7 @@
         <div id="nav-hidden"></div>
         <div class="HolyGrail-button" data-name="company"><img src="img/skype.png" /><span>企业信息</span></div>
         <div class="HolyGrail-button" data-name="product"><img src="img/skype.png" /><span>产品信息</span></div>
+        <div class="HolyGrail-button" data-name="produce"><img src="img/skype.png" /><span>生产信息</span></div>
     </nav>
     <aside class="HolyGrail-aside hidden">
     </aside>
