［更新］小修复
1、新增了全选效果；

--- a/html/produce/produceCode.html
+++ b/html/produce/produceCode.html
@@ -102,6 +102,7 @@
         <tr>
             <td colspan="8">
                 <div>
+                    <p>删除选中</p>
                     <span class="pageTip">共12条，每页显示：20条</span>
                     <ul class="pagination">
                         <li class="pageBefore">‹</li>
