--- a/html/company/warehouse.html
+++ b/html/company/warehouse.html
@@ -111,6 +111,7 @@
         <tr>
             <td colspan="6">
                 <div>
+                    <p>删除选中</p>
                     <span class="pageTip">共12条，每页显示：20条</span>
                     <ul class="pagination">
                         <li class="pageBefore">‹</li>
