［更新］新页面更新
1、更新了生产信息的部分页面

--- a/html/produce/produceCode.html
+++ b/html/produce/produceCode.html
@@ -23,6 +23,9 @@
             <label for="endCode">结束码段</label>
             <input type="text" name="endCode" id="endCode" />
         </div>
+        <div class="information submit">
+            <button id="submit">提交</button>
+        </div>
     </div>
     <div class="contentTitle">
         <h5><span>生产信息关联表</span></h5>
