［更新］新模块
1、生产过程模块

--- a/frame.html
+++ b/frame.html
@@ -29,6 +29,7 @@
         <div class="HolyGrail-button" data-name="company"><img src="img/skype.png" /><span>企业信息</span></div>
         <div class="HolyGrail-button" data-name="product"><img src="img/skype.png" /><span>产品信息</span></div>
         <div class="HolyGrail-button" data-name="produce"><img src="img/skype.png" /><span>生产信息</span></div>
+        <div class="HolyGrail-button" data-name="process"><img src="img/skype.png" /><span>生产过程</span></div>
     </nav>
     <aside class="HolyGrail-aside hidden">
     </aside>
