［更新］修复和新增
1、修复了“箱码质量码关联”没有提交按钮；
2、新增了“生产过程记录”没有新增按钮；
3、修复了“生产过程记录”记错别字

--- a/html/process/process.html
+++ b/html/process/process.html
@@ -11,7 +11,8 @@
 </style>
 <div id="content">
     <div class="contentTitle">
-        <h5><span>生产过程纪录</span></h5>
+        <h5><span>生产过程记录</span></h5>
+        <div id="addProcess"><span>新增生产过程</span></div>
     </div>
     <table>
         <thead>
