--- a/html/produce/connectCode.html
+++ b/html/produce/connectCode.html
@@ -24,7 +24,7 @@
         </div>
         <div class="option submit">
             <label for="submit">&nbsp;</label>
-            <button id="submit">预览</button>
+            <button id="view">预览</button>
         </div>
     </div>
     <div class="contentTitle">
@@ -82,5 +82,9 @@
         </tr>
         </tfoot>
     </table>
+    <div class="option submit">
+        <label for="submit">&nbsp;</label>
+        <button id="submit">提交</button>
+    </div>
 </div>
 <script src="js/produce/connectCode.js"></script>
