［更新］新模块更新
1、更新了溯源模块的新样式结构

--- a/html/process/process.html
+++ b/html/process/process.html
@@ -58,7 +58,7 @@
             <td>这里是备注信息</td>
             <td>
                 <div class="dus">
-                    <img src="img/skype.png" alt="edit" />
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
                     <img src="img/skype.png" alt="delete" />
                 </div>
             </td>
