--- a/frame.html
+++ b/frame.html
@@ -31,6 +31,7 @@
         <div class="HolyGrail-button" data-name="produce"><img src="img/skype.png" /><span>生产信息</span></div>
         <div class="HolyGrail-button" data-name="process"><img src="img/skype.png" /><span>生产过程</span></div>
         <div class="HolyGrail-button" data-name="trace"><img src="img/skype.png" /><span>溯源追踪</span></div>
+        <div class="HolyGrail-button" data-name="marketing"><img src="img/skype.png" /><span>营销管理</span></div>
     </nav>
     <aside class="HolyGrail-aside hidden">
     </aside>
