--- a/html/product/product.html
+++ b/html/product/product.html
@@ -1,1 +1,172 @@
+<div id="content">
+    <div class="contentTitle">
+        <h5><span>产品管理</span></h5>
+        <div id="addProcess"><span>新增产品</span></div>
+    </div>
+    <div class="contentOperation">
+        <label for="nameSearch">名称:</label>
+        <select name="nameSearch" id="nameSearch">
+            <option value="0">全部</option>
+        </select>
+        <label for="specSearch">规格:</label>
+        <select name="specSearch" id="specSearch">
+            <option value="0">全部</option>
+        </select>
+        <label for="startTime">录入时间:</label>
+        <input type="datetime-local" name="startTime" id="startTime" />
+        <span>~</span>
+        <input type="datetime-local" name="endTime" id="endTime" />
+        <label for="search">自定义搜索:</label>
+        <input type="text" name="search" id="search" placeholder="请输入内容" />
+    </div>
+    <table>
+        <thead>
+        <tr>
+            <th><input type="checkbox" name="selectAll" id="selectAll" /></th>
+            <th>图片</th>
+            <th>名称</th>
+            <th>规格</th>
+            <th>价格(元)</th>
+            <th>录入时间</th>
+            <th>网店链接</th>
+            <th>操作</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td><input type="checkbox" name="select" /></td>
+            <td>
+                <div class="dus">
+                    <img src="img/skype.png" alt="产品图片" />
+                </div>
+            </td>
+            <td>王朝国酒</td>
+            <td>120ml</td>
+            <td>250</td>
+            <td>2016年6月16日 18:53:07</td>
+            <td>http://www.zmade.cn</td>
+            <td>
+                <div class="dus">
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
+                    <img src="img/skype.png" alt="delete" />
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="select" /></td>
+            <td>
+                <div class="dus">
+                    <img src="img/skype.png" alt="产品图片" />
+                </div>
+            </td>
+            <td>王朝国酒</td>
+            <td>120ml</td>
+            <td>250</td>
+            <td>2016年6月16日 18:53:07</td>
+            <td>http://www.zmade.cn</td>
+            <td>
+                <div class="dus">
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
+                    <img src="img/skype.png" alt="delete" />
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="select" /></td>
+            <td>
+                <div class="dus">
+                    <img src="img/skype.png" alt="产品图片" />
+                </div>
+            </td>
+            <td>王朝国酒</td>
+            <td>120ml</td>
+            <td>250</td>
+            <td>2016年6月16日 18:53:07</td>
+            <td>http://www.zmade.cn</td>
+            <td>
+                <div class="dus">
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
+                    <img src="img/skype.png" alt="delete" />
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="select" /></td>
+            <td>
+                <div class="dus">
+                    <img src="img/skype.png" alt="产品图片" />
+                </div>
+            </td>
+            <td>王朝国酒</td>
+            <td>120ml</td>
+            <td>250</td>
+            <td>2016年6月16日 18:53:07</td>
+            <td>http://www.zmade.cn</td>
+            <td>
+                <div class="dus">
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
+                    <img src="img/skype.png" alt="delete" />
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="select" /></td>
+            <td>
+                <div class="dus">
+                    <img src="img/skype.png" alt="产品图片" />
+                </div>
+            </td>
+            <td>王朝国酒</td>
+            <td>120ml</td>
+            <td>250</td>
+            <td>2016年6月16日 18:53:07</td>
+            <td>http://www.zmade.cn</td>
+            <td>
+                <div class="dus">
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
+                    <img src="img/skype.png" alt="delete" />
+                </div>
+            </td>
+        </tr>
+        <tr>
+            <td><input type="checkbox" name="select" /></td>
+            <td>
+                <div class="dus">
+                    <img src="img/skype.png" alt="产品图片" />
+                </div>
+            </td>
+            <td>王朝国酒</td>
+            <td>120ml</td>
+            <td>250</td>
+            <td>2016年6月16日 18:53:07</td>
+            <td>http://www.zmade.cn</td>
+            <td>
+                <div class="dus">
+                    <img class="dusEdit" src="img/skype.png" alt="edit" />
+                    <img src="img/skype.png" alt="delete" />
+                </div>
+            </td>
+        </tr>
+        </tbody>
+        <tfoot>
+        <tr>
+            <td colspan="8">
+                <div>
+                    <p>删除选中</p>
+                    <span class="pageTip">共12条，每页显示：20条</span>
+                    <ul class="pagination">
+                        <li class="pageBefore">‹</li>
+                        <li class="active">1</li>
+                        <li>2</li>
+                        <li>3</li>
+                        <li class="pageNext">›</li>
+                    </ul>
+                    <input type="text" name="pageTarget" />
+                    <span class="pageGo">GO</span>
+                </div>
+            </td>
+        </tr>
+        </tfoot>
+    </table>
+</div>
 <script src="js/product/product.js"></script>
